add retrivel service and update ingestion
